test/core/errors/indexed_offsets_error/zs/alignment_expression_error.zs
package alignment_expression_error;

struct AlignmentExpressionError
{
align(@index):
    uint8 fields[10];
};
